rollout-rollback.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: myapp-deployment
 labels:
     app: myapp
     type: front-end
spec:
  template:
    metadata:
     name: myapp-pod
     labels:
        app: myapp
        type: front-end
     spec:
       containers:
       - name: nginx-container
         image: nginx:1.7.1

  replicas: 3
  selector:
     matchLabels:
        type: front-end
