service-LB-definition.yaml
apiVersion: v1
kind: Service
metadata:
    name: myapp-service
spec:
    type: LoadBalancer
   ports:
    - targetPort: 80
      port: 80
      nodePort: 30008
