svc-simple-web1.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimeamp: null
  name: webapp-service
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    nodePort: 30080
  selector:
    name: simple-webapp
  type: NodePort
status:
  LoadBalancer: {}
