ingress.yaml
apiVersion: network.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-policy
spec:
  podSelector:
    matchLabels:
      role: db
   policyTypes:
   - Ingress

   ingress:
   - from
     - podSelector:
           matchLabels:
              name: api-pod
       namespaceSelector:
           matchLabels:
             name: prod
     - ipBlock:
           cidr: ip-address
       ports:
       - protocol: TCP
         port: 3306
